# sbgc32_ros2_driver

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: angles.hpp  camera.hpp  cascade-face-detector.hpp  constants.hpp  controller.hpp  detector.hpp  gimbal.hpp  helpers.hpp  sbgc32_node.hpp
include/detectors/: cascade.hpp
include/gimbals/: fake.hpp  real.hpp
include/strategies/: global.hpp  local.hpp
lib/gimbal-driver/imu/: imu.c
libs/gimbal-driver/: CMakeLists.txt
opencv/: Source.cpp
program/: CMakeLists.txt
program/include/: angles.hpp  detector.hpp
program/include/detectors/: cascade.hpp
program/include/strategies/: global.hpp
program/src/: controller.cpp  main.cpp
program/src/detectors/: cascade.cpp
program/src/gimbals/: fake.cpp  real.cpp
program/src/strategies/: global.cpp
program/test/: StrategyTest.cpp  config.cpp
src/: angles.cpp  camera.cpp  cascade-face-detector.cpp  controller.cpp  detector.cpp  gimbal.cpp  helpers.cpp  main.cpp  sbgc32_driver.cpp  sbgc32_node.cpp
src/detectors/: cascade.cpp
src/gimbals/: fake.cpp  real.cpp
src/sbgc32/: CMakeLists.txt  package.xml
src/sbgc32/include/: gimbal.hpp
src/sbgc32/include/gimbals/: real.hpp
src/sbgc32/src/: sbgc32_driver.cpp
src/strategies/: global.cpp  local.cpp
tests/: CMakeLists.txt
